# UltimateTicTacToeAI

./: Cargo.toml  README.md
src/: main.py  main.rs
src/game/: game_uttt.rs  mod.rs  node_uttt.rs  playable.rs  tools.rs
src/template/: tic_tac_toe.rs
