[package]
name = "UltimateTicTacToe"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
env_logger = "0.11.6"
log = "0.4"
ahash = "0.8.3"
bitvec = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minimax ="0.5.3"

[profile.dev]
debug = true
opt-level = 3         
lto = false           # Disable Link-Time Optimization
panic = "abort"       # Faster builds without unwinding
incremental = true    # Enable incremental compilation

[profile.release]
opt-level = 3
debug = true
lto = true

[profile.test]
opt-level = 0          # Disable optimizations for tests
debug = true           # Include debug information
overflow-checks = true # Ensure integer overflow checks
lto = false            # Disable Link-Time Optimization
panic = "unwind"       # Keep unwinding for better test backtraces
incremental = true     # Enable incremental compilation
